changing before tesing rebase conflict

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>confilic merge test</title>
+	<title>changing before tesing rebase conflict</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
