--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html
+	rebase conflict>
 	i do not know	>
 <head>
-	<title>changing something here</title>
+	<title>tesing rebase conflict</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +16,11 @@
 	<!-- Content Goes Here -->
 		<p>
 			something changes here
-			why do we change all the time
+			testing rebase conflict
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2015</p>
+		<p>&copy; Company 2014</p>
 	</footer>
 </body>
 </html>
