setup for testing rebase conflict

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+<!DOCTYPE html
+	i do not know	>
 <head>
-	<title>changing before tesing rebase conflict</title>
+	<title>changing something here</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,10 +16,11 @@
 	<!-- Content Goes Here -->
 		<p>
 			something changes here
+			why do we change all the time
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 2015</p>
 	</footer>
 </body>
 </html>
